Bug 111826 - Issues with sidebar's Master Slide / Close Master Slide button in handout view
Summary: Issues with sidebar's Master Slide / Close Master Slide button in handout view
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.0.0
Keywords: difficultyBeginner, easyHack, skillCpp, topicUI
Depends on:
Blocks: Handout-View
  Show dependency treegraph
 
Reported: 2017-08-15 21:31 UTC by Tamás Zolnai
Modified: 2017-11-09 14:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-08-15 21:31:20 UTC
Description:
Handout view is a special view in Impress which has only a master slide mode.
Sidebar has an issue when swicthing to this handout view. Sometimes the button is not displayed at all, sometimes it is displayed as Master Slide (which is an error since we already on a master slide) and sometimes it's displayed as Close Master Slide button (which might be OK), but if you click on it nothing happens, since there is no "normal view" for handouts.

I suggest to remove that button when we are in handout mode. I guess something was done to do that, that's why sometimes the button is not displayed, but the code does not work correctly it seems.

Steps to Reproduce:
1. Open Impress
2. Switch from normal slide view to handout view (button is displayed as Master Slide)
3. Switch from master slide view to handout view (button is displayed as Close Master Slide)
4. Switch from outliner view to handout view (button is not displayed at all)

Actual Results:  
Master Slide \ Close Master Slide button displayed inconsistently.

Expected Results:
This button is useless in handout mode, so would be good to remove.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36
Comment 1 Tamás Zolnai 2017-08-24 17:35:45 UTC
Let's turn this into an easy hack. The code is here:
sd/source/ui/sidebar/SlideBackground.cxx
SlideBackground::HandleContextChange() method might be a good starting point.
Comment 2 Xisco Faulí 2017-11-08 23:56:57 UTC
Gerrit patch: https://gerrit.libreoffice.org/#/c/44516/
Comment 3 Commit Notification 2017-11-09 10:57:51 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d6ee89bc8882b13332275a156bfa8a56b5cf81e9

tdf#111826: Hide master slide button in handout view

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.