tdf#111826: Hide master slide button in handout view

Change-Id: I4d3efcbe9e720ab43fa18d6c475ef749f1f9d61a